<?xml version="1.0" encoding="utf-8"?><!-- 로그인 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/common_fill_style"
    android:background="@color/colorBackgound"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="28"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:orientation="vertical" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:gravity="center_horizontal">

            <com.greencross.medigene.component.CFontTextView
                android:id="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Medi Gene"
                android:textAlignment="center"
                android:textColor="@color/colorMain"
                android:textSize="35sp"
                app:font="@string/KelsonSansBold"/>

            <com.greencross.medigene.component.CFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_title"
                android:text="약물관리서비스 앱입니다."
                android:textAlignment="center"
                android:textColor="@color/colorAlertTitleGray"
                android:textSize="14sp"
                app:font="@string/KelsonSansRegular"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:orientation="vertical" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="72"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35"
            android:orientation="vertical">

            <com.greencross.medigene.component.CFontEditText
                android:id="@+id/login_id_edittext"
                style="@style/common_edittext_style"
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:hint="@string/login_id_hint"
                android:inputType="textEmailAddress"
                app:font="@string/KelsonSansRegular"/>

            <com.greencross.medigene.component.CFontEditText
                android:id="@+id/login_pwd_edittext"
                style="@style/common_edittext_style"
                android:layout_width="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                app:font="@string/KelsonSansRegular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <com.greencross.medigene.component.CFontCheckBox
                        android:id="@+id/login_auto_login_checkbox"
                        style="@style/common_checkbox_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"

                        android:text="@string/login_auto_login_setting" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <com.greencross.medigene.component.CFontCheckBox
                        android:id="@+id/login_save_id_checkbox"
                        style="@style/common_checkbox_style"
                        android:layout_marginLeft="20dp"
                        android:text="@string/login_save_id" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <com.greencross.medigene.component.CFontButton
                android:id="@+id/login_login_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorMain"
                android:text="@string/text_login"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp_20"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:visibility="gone">

                <com.greencross.medigene.component.CFontTextView
                    android:id="@+id/login_find_id_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_id"
                    android:textColor="@color/colorMain"
                    android:fontFamily="Griffy-Regular"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:font="@string/KelsonSansBold"/>

                <com.greencross.medigene.component.CFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDarkGray"
                    android:fontFamily="Griffy-Regular"
                    android:textSize="14sp"
                    android:text=" or "
                    app:font="@string/KelsonSansRegular"/>

                <com.greencross.medigene.component.CFontTextView
                    android:id="@+id/login_find_pwd_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_pwd"
                    android:textColor="@color/colorMain"
                    android:fontFamily="Griffy-Regular"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    app:font="@string/KelsonSansBold"/>

                <com.greencross.medigene.component.CFontTextView
                    android:id="@+id/login_fogot_account_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="14sp"
                    android:fontFamily="Griffy-Regular"
                    android:text="@string/login_foget_account"
                    app:font="@string/KelsonSansRegular"/>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorDarkGray"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">




                <com.greencross.medigene.component.CFontButton
                    android:id="@+id/login_join_button"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/colorSub"
                    android:textColor="@color/colorWhite"
                    android:text="@string/login_member_join" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>